Fix word wrap in console

--- a/styles/tidal.less
+++ b/styles/tidal.less
@@ -44,6 +44,7 @@ atom-pane div.tidalcycles.console {
     font-family: Consolas, monospace;
     font-size: 14px;
     white-space: pre-wrap;
+    word-break: keep-all;
   }
   .error{
     color: @text-color-error;
